sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: ';' expected but ',' found.
        copie(k,v),copie(v,k)
                  ^